﻿[B]1.4.0 (2012.01.14)[/B]
initialized into eden

[B]1.3.4 (2012.01.03)[/B]
fixed: ATV2 not able to exit lyrics window while song is playing. Added handling for ATV2 menu button.

[B]1.3.3 (2010.10.13)[/B]
added: settings to load same name lyrics from sub folder

[B]1.3.2 (2010.10.12)[/B]
removed: unused codes
Initial import into official addons repository

[B]1.3.1 (2010.10.11)[/B]
added: scraper for embedded lrc lyrics in TXXX id3 frame

[B]1.3.0 (2010.10.10)[/B]
changed: regular setting code

[B]1.2.2 (2010.8.13)[/B]
Initial import into addons repository

[B]1.2.2 (2010.4.23)[/B]
removed: setting "Save lyrics files with extension"
added: setting "Save lyrics files in artist folder" 

[B]1.2.1 (2010.2.20)[/B]
added: scraper for www.lyrdb.com
changed: timer code

[B]1.2.0 (2010.2.16)[/B]
changed: use Player.Filenameandpath to find lrc file after r27711

[B]1.1.1 (2009.12.21)[/B]
fixed: timer issue again - freeze xbmc when select lyrics

[B]1.1.0 (2009.12.20)[/B]
fixed: timer issue - skip next song continuously may freeze xbmc

[B]1.0.5 (2009.12.19)[/B]
fixed: lyric not scroll when repeat one song.
fixed: some code can't run under ubuntu

[B]1.0.4 (2009.12.4)[/B]
fixed: can't show lyrics from file saved by the script, because not save as lrc format

[B]1.0.3 (2009.12.1)[/B]
fixed: default scraper settings wrong

[B]1.0.2 (2009.11.30)[/B]
changed: current line of lyrics not show at the bottom
fixed: add exception process when XBMC is not playing any media file
changed: calculate the time for the next line and use that instead of a hard coded 2.0, thanks Nuka1195

[B]1.0.1 (2009.11.29)[/B]
fixed: freeze xbmc when lyrics not found
fixed: multi-thread access timer issue

[B]1.0.0 (2009.11.28)[/B]
new feature: lyrics synchronized scroll when the song playing